copyedits to keep content in sync

--- a/src/pages/guidelines/typography/styling-strategies.mdx
+++ b/src/pages/guidelines/typography/styling-strategies.mdx
@@ -6,13 +6,13 @@ title: Typography
 description:
   Carbon provides designers with two type sets that support productive and
   expressive experiences.
-tabs: ['Overview', 'Type usage', 'Type sets', 'Code']
+tabs: ['Overview', 'Styling strategies', 'Type sets', 'Code']
 ---
 
 <PageDescription>
 
 Carbon provides two type sets that support both productive and expressive
-experiences. Primarily, productive was designed for product and expressive was
+moments. Primarily, productive was designed for product and expressive was
 designed for web pages, but there are opportunities to blend contrasting moments
 to provide clarity through hierarchy, and elevate the overall experience.
 
@@ -40,13 +40,13 @@ available within the one [Sketch kit](/designing/design-kits/).
 ## Overview
 
 Within Carbon, there are two type sets available for use with productive and
-expressive experiences. The productive type styles were developed for product
+expressive moments. The productive type styles were developed for product
 design, and the expressive, more editorial type styles were developed for
 IBM.com website pages.
 
 The overarching rule has been to use the productive type styles for product
-design and the expressive for web pages. For the most part, this is still a good
-guideline to follow. However, there are situations where we can create
+design and the expressive for editorial pages. For the most part, this is still
+a good guideline to follow. However, there are situations where we can create
 contrasting moments that better support the user's intention or task.
 
 Let's look at the respective design rationales for each experience, and then see
