--- a/src/pages/guidelines/typography/type-sets.mdx
+++ b/src/pages/guidelines/typography/type-sets.mdx
@@ -6,7 +6,7 @@ title: Typography
 description:
   The productive and expressive type sets support designers creating for a full
   range of user needs and activities across product and web pages.
-tabs: ['Overview', 'Type usage', 'Type sets', 'Code']
+tabs: ['Overview', 'Styling strategies', 'Type sets', 'Code']
 ---
 
 import TypesetStyle from 'components/TypesetStyle';
