--- a/src/pages/guidelines/typography/code.mdx
+++ b/src/pages/guidelines/typography/code.mdx
@@ -6,7 +6,7 @@ title: Typography
 description:
   Typography can help create clear hierarchies, organize information, and guide
   users through a product or experience.
-tabs: ['Overview', 'Type usage', 'Type sets', 'Code']
+tabs: ['Overview', 'Styling strategies', 'Type sets', 'Code']
 ---
 
 <PageDescription>
