--- a/src/pages/components/tile/usage.mdx
+++ b/src/pages/components/tile/usage.mdx
@@ -538,7 +538,7 @@ Tiles reside in the same plane as the background layer—they do not have
 elevation. Do not add drop shadows to tiles. Tiles organize essential
 information and have the same visual hierarchy as content within the same page.
 Modals, popovers, and dialogs do have elevation but are not inherently part of
-the users main workstream and are envoked on screen to reveal secondary
+the user's main workstream and are invoked on screen to reveal secondary
 information, actions, or notifications.
 
 ### Call-to-actiions
