--- a/src/pages/components/tile/usage.mdx
+++ b/src/pages/components/tile/usage.mdx
@@ -306,7 +306,7 @@ a [checkbox](/components/checkbox/usage).
 
 ![Selectable radio-button / single select tiles](images/tile-usage-3.png)
 
-<Caption>Selectable radio-button / single select tiles.</Caption>
+<Caption>Single select tiles work like radio-buttons</Caption>
 
 ![Selectable checkbox / multi-select tiles](images/tile-usage-4.png)
 
