--- a/src/pages/components/tile/usage.mdx
+++ b/src/pages/components/tile/usage.mdx
@@ -541,7 +541,7 @@ Modals, popovers, and dialogs do have elevation but are not inherently part of
 the user's main workstream and are invoked on screen to reveal secondary
 information, actions, or notifications.
 
-### Call-to-actiions
+### Call-to-actions
 
 For **read-only, selectable, and expandable tiles**, use `$link-01` when icon and
 link are paired together or use $interactive-04 when the icon stands alone.
