--- a/src/pages/components/tile/usage.mdx
+++ b/src/pages/components/tile/usage.mdx
@@ -256,7 +256,9 @@ features.
 | Variant                    | Purpose                                                                                                   |
 | -------------------------- | --------------------------------------------------------------------------------------------------------- |
 | [Read-only](#read-only)    | For high-level, short, and digestible content pieces such as features, plans, or services offered.        |
-| [Clikckable](#clickable)   | For prompting an action, navigating or directing to other pieces of information about the subject matter. |
+| [Clickable](#clickable)   | For prompting an action, navigating or directing to other pieces of information about the subject matter. |
+
+small typo! should be clickable instead of clikckalbe
 | [Selectable](/#selectable) | For presenting options to a user in a structured manner, such as a set of pricing plans.                  |
 | [Expandable](#expandable)  | For hiding and revealing a large amount of content in order to focus on specific pieces of info.          |
 
