--- a/src/pages/components/tile/usage.mdx
+++ b/src/pages/components/tile/usage.mdx
@@ -312,7 +312,7 @@ a [checkbox](/components/checkbox/usage).
 
 ![Selectable checkbox / multi-select tiles](images/tile-usage-4.png)
 
-<Caption>Selectable checkbox / multi-select tiles. </Caption>
+<Caption>Multi-select tiles work like checkboxes </Caption>
 
 </Column>
 </Row>
