--- a/src/pages/components/tile/usage.mdx
+++ b/src/pages/components/tile/usage.mdx
@@ -478,7 +478,7 @@ version.
 - Displaying high-level information and metrics on dashboards.
 - A vertical masonry grid can vary in height, but is consistent in width.
 - A horizontal masonry grid can vary in width. Rows of tiles may vary in height,
-  but the tiles within a row are consistent in height.
+  but the tiles within a row should be consistent in height.
 
 <Row>
 <Column colLg={4}>
