--- a/src/pages/components/tile/usage.mdx
+++ b/src/pages/components/tile/usage.mdx
@@ -546,7 +546,7 @@ information, actions, or notifications.
 ### Call-to-actions
 
 For **read-only, selectable, and expandable tiles**, use `$link-01` when icon and
-link are paired together or use $interactive-04 when the icon stands alone.
+link are paired together or use `$interactive-04` when the icon stands alone.
 
 For **clickable tiles**, don’t highlight text or icons to avoid them being confused as links or clickable.
 
