docs: add myself to team page 👋

--- a/src/pages/all-about-carbon/the-team.mdx
+++ b/src/pages/all-about-carbon/the-team.mdx
@@ -58,6 +58,11 @@ design and build with them.
 ![Anna Gonzales headshot](/images/team/gonzales_anna.png)
 
 </Profile>
+<Profile name="Joe Harvey" title="Full-stack Developer">
+
+![Joe Harvey headshot](/images/team/harvey_joe.png)
+
+</Profile>
 <Profile name="Taylor Jones" title="Software Developer">
 
 ![Taylor Jones headshot](/images/team/jones_taylor.png)
