--- a/src/pages/developing/react-tutorial/step-1.mdx
+++ b/src/pages/developing/react-tutorial/step-1.mdx
@@ -131,14 +131,12 @@ Your default browser should open up with an empty page that says:
 Even though we installed existing dependencies, we've yet to install the Carbon
 packages.
 
-- `carbon-components` - component styles
-- `carbon-components-react` - React components
-- `@carbon/icons-react` - React icons
+- `@carbon/react` includes components, styles and icons.
 
 Stop your development server with `CTRL-C` and install Carbon dependencies with:
 
 ```bash
-yarn add carbon-components@10.25.0 carbon-components-react@7.25.0 @carbon/icons-react@10.22.0 carbon-icons@7.0.7
+yarn add @carbon/react
 ```
 
 ## Install and build Sass
@@ -147,7 +145,7 @@ We need to run a Sass build as the Carbon styles are authored in Sass, so run
 the following command to install `sass` as a dependency.
 
 ```bash
-yarn add sass@1.29.0
+yarn add sass
 ```
 
 To avoid having to add the `~` prefix when importing SCSS files from
@@ -181,7 +179,7 @@ In `index.scss`, import the Carbon styles by adding the following at the top of
 the file:
 
 ```scss path=src/index.scss
-@import 'carbon-components/scss/globals/scss/styles.scss';
+@use '@carbon/react';
 ```
 
 Making this change to `index.scss` will cause all of the Carbon Sass to
@@ -205,7 +203,7 @@ working properly. At the top of `App.js`, import the `Button` by adding the
 following:
 
 ```javascript path=src/App.js
-import { Button } from 'carbon-components-react';
+import { Button } from '@carbon/react';
 ```
 
 In the `App` component return, you can now replace:
@@ -249,7 +247,7 @@ Next, in `app.scss`, we'll import our `TutorialHeader` styles. Your file should
 now look like this:
 
 ```scss path=src/app.scss
-@import './components/TutorialHeader/tutorial-header.scss';
+@use './components/TutorialHeader/tutorial-header.scss';
 ```
 
 ### Import and export the header
@@ -280,7 +278,7 @@ import {
   SideNav,
   SideNavItems,
   HeaderSideNavItems,
-} from 'carbon-components-react';
+} from '@carbon/react';
 
 const TutorialHeader = () => (
   <HeaderContainer
@@ -336,16 +334,16 @@ straight to the main content.
 
 ### Import icons
 
-Now let's import the icons from our `@carbon/icons-react` elements package. In
-the `TutorialHeader.js` file, we need to import each individual icon we will
-use.
+Now let's import the icons from our `@carbon/icons-react` elements package,
+which is included in our `@carbon/react` exports. In the `TutorialHeader.js`
+file, we need to import each individual icon we will use.
 
 ```javascript path=src/components/TutorialHeader/TutorialHeader.js
 import {
   AppSwitcher20,
   Notification20,
   UserAvatar20,
-} from '@carbon/icons-react';
+} from '@carbon/react/icons';
 ```
 
 Then we need to add the `HeaderGlobalAction` component inside of the
@@ -380,7 +378,7 @@ Next we'll render our UI Shell by importing our `TutorialHeader` component and
 ```javascript path=src/App.js
 import React, { Component } from 'react';
 import './app.scss';
-import { Button, Content } from 'carbon-components-react';
+import { Button, Content, Theme } from '@carbon/react';
 import TutorialHeader from './components/TutorialHeader';
 ```
 
@@ -392,17 +390,47 @@ class App extends Component {
   render() {
     return (
       <>
-        <TutorialHeader />
-        <Content>
-          <Button>Button</Button>
-        </Content>
+        <Theme theme="g100">
+          <TutorialHeader />
+        </Theme>
+        <Theme theme="white">
+          <Content>
+            <Button>Button</Button>
+          </Content>
+        </Theme>
       </>
     );
   }
 }
 ```
 
-You should now see a styled UI Shell header and a button below it.
+You should now see a styled UI Shell header and a button below it, however the
+UI Shell is being rendered in the white theme. Let's import the `Theme`
+component styles, so it applies the correct `g100` theme we configured.
+
+In `app.scss` we need to import the theming styles below our component styles.
+
+```scss path=src/app.scss
+@use './components/TutorialHeader/tutorial-header.scss';
+
+@use '@carbon/react/scss/themes';
+@use '@carbon/react/scss/theme';
+@use '@carbon/react/scss/zone';
+```
+
+In `index.scss` add these overriding styles. This is needed because the
+`Content` component receives some styles using the selector
+`.bx—header ~ .bx—content`, but these styles are no longer being applied since
+both the header and content are being wrapped by the theme div.
+
+```scss
+.bx--content {
+  margin-top: 3rem;
+  background: var(--bx-background);
+}
+```
+
+You should now see a g100 themed UI Shell header and a button below it.
 
 ## Create pages
 
@@ -444,9 +472,13 @@ src/content/RepoPage
 Next, we'll import our content Sass files in `app.scss`, like so:
 
 ```scss path=src/app.scss
-@import './components/TutorialHeader/tutorial-header.scss';
-@import './content/LandingPage/landing-page.scss';
-@import './content/RepoPage/repo-page.scss';
+@use './components/TutorialHeader/tutorial-header.scss';
+@use './content/LandingPage/landing-page.scss';
+@use './content/RepoPage/repo-page.scss';
+
+@use '@carbon/react/scss/themes';
+@use '@carbon/react/scss/theme';
+@use '@carbon/react/scss/zone';
 ```
 
 ### Import and export content pages
