--- a/src/pages/components/tile/usage.mdx
+++ b/src/pages/components/tile/usage.mdx
@@ -253,14 +253,12 @@ selectable, or expandable. These variations of tiles are flexible enough to
 support a variety of different use cases when building more complicating card
 features.
 
-| Variant                    | Purpose                                                                                                   |
-| -------------------------- | --------------------------------------------------------------------------------------------------------- |
-| [Read-only](#read-only)    | For high-level, short, and digestible content pieces such as features, plans, or services offered.        |
+| Variant                   | Purpose                                                                                                   |
+| ------------------------- | --------------------------------------------------------------------------------------------------------- |
+| [Read-only](#read-only)   | For high-level, short, and digestible content pieces such as features, plans, or services offered.        |
 | [Clickable](#clickable)   | For prompting an action, navigating or directing to other pieces of information about the subject matter. |
-
-small typo! should be clickable instead of clikckalbe
-| [Selectable](/#selectable) | For presenting options to a user in a structured manner, such as a set of pricing plans.                  |
-| [Expandable](#expandable)  | For hiding and revealing a large amount of content in order to focus on specific pieces of info.          |
+| [Selectable](#selectable) | For presenting options to a user in a structured manner, such as a set of pricing plans.                  |
+| [Expandable](#expandable) | For hiding and revealing a large amount of content in order to focus on specific pieces of info.          |
 
 ### Read-only
 
@@ -545,10 +543,12 @@ information, actions, or notifications.
 
 ### Call-to-actions
 
-For **read-only, selectable, and expandable tiles**, use `$link-01` when icon and
-link are paired together or use `$interactive-04` when the icon stands alone.
+For **read-only, selectable, and expandable tiles**, use `$link-01` when icon
+and link are paired together or use `$interactive-04` when the icon stands
+alone.
 
-For **clickable tiles**, don’t highlight text or icons to avoid them being confused as links or clickable.
+For **clickable tiles**, don’t highlight text or icons to avoid them being
+confused as links or clickable.
 
 <DoDontRow>
 
