--- a/src/pages/components/tile/usage.mdx
+++ b/src/pages/components/tile/usage.mdx
@@ -345,10 +345,10 @@ the chevron icon.
 </Column>
 </Row>
 
-1. **Header**: Includes a title, optional label, and the close icon.
+1. **Container**: Includes a title, optional label, and the close icon.
 
-2. **Body**: Contains the information and/or controls needed to complete the
-   modal's task. It can include message text and components.
+2. **Content area**: Contains the information and/or controls needed to complete
+   the modal's task. It can include message text and components.
 
 ### Sizing
 
