--- a/src/pages/components/data-table/style.mdx
+++ b/src/pages/components/data-table/style.mdx
@@ -64,11 +64,11 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 ## Typography
 
-| Element       | Font-size (px / rem) | Font-weight    | Type token               |
-| ------------- | -------------------- | -------------- | ------------------------ |
-| Table header  | 20 / 1.25            | Regular / 400  | `$productive-heading-03` |
-| Column header | 14 / 0.875           | SemiBold / 600 | `$productive-heading-01` |
-| Row text      | 14 / 0.875           | Regular / 400  | `$body-short-01`         |
+| Element       | Font-size (px/rem) | Font-weight    | Type token            |
+| ------------- | ------------------ | -------------- | --------------------- |
+| Table header  | 20 / 1.25          | Regular / 400  | `$heading-03`         |
+| Column header | 14 / 0.875         | SemiBold / 600 | `$heading-compact-01` |
+| Row text      | 14 / 0.875         | Regular / 400  | `$body-compact-01`    |
 
 ## Structure
 
@@ -128,7 +128,6 @@ expected to have 2 lines of content in a single row.
 | Large (lg)       | 48 / 3          |
 | Extra large (xl) | 64 / 4          |
 
-
 <Row>
 <Column colLg={8}>
 
@@ -183,8 +182,9 @@ small toolbar is paired with the small and extra small row sizes.
 
 ### Batch action bar
 
-The large 48px batch action bar is paired with the extra large and large row sizes.
-The small batch action bar is paired with the small and extra small row sizes.
+The large 48px batch action bar is paired with the extra large and large row
+sizes. The small batch action bar is paired with the small and extra small row
+sizes.
 
 | Element                 | Property                    | px / rem | Spacing token |
 | ----------------------- | --------------------------- | -------- | ------------- |
