--- a/src/pages/components/select/style.mdx
+++ b/src/pages/components/select/style.mdx
@@ -48,12 +48,11 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 Select text should be set in sentence case, with only the first word in a phrase
 and any proper nouns capitalized. Select text should be three words or less.
 
-| Class                   | Font-size (px/rem) | Font-weight   | Type token       |
-| ----------------------- | ------------------ | ------------- | ---------------- |
-| `.bx--label`            | 12 / 0. 75         | Regular / 400 | `$label-01`      |
-| `.bx--select-input`     | 14 / 0.875         | Regular / 400 | `$body-short-01` |
-| `.bx--select--inline`   | 14 / 0.875         | Regular / 400 | `$body-short-01` |
-| `.bx--form-requirement` | 12 / 0.75          | Regular / 400 | `$label-01`      |
+| Element       | Font-size (px/rem) | Font-weight   | Type token         |
+| ------------- | ------------------ | ------------- | ------------------ |
+| Label         | 12 / 0.75          | Regular / 400 | `$label-01`        |
+| Field text    | 14 / 0.875         | Regular / 400 | `$body-compact-01` |
+| Error message | 12 / 0.75          | Regular / 400 | `$label-01`        |
 
 ## Structure
 
