--- a/src/pages/components/tabs/style.mdx
+++ b/src/pages/components/tabs/style.mdx
@@ -155,12 +155,12 @@ tabs.](images/tab-style-5.png)
 
 ## Typography
 
-Tab label should be set in sentence case, and should not exceed three words.
+Tab labels should be set in sentence case, and should not exceed three words.
 
-| Class                          | Font-size (px/rem) | Font-weight    | Type token      |
-| ------------------------------ | ------------------ | -------------- | --------------- |
-| `.bx--tabs__nav-link:selected` | 14 / 0.875         | SemiBold / 600 | `$heading-01`   |
-| `.bx--tabs__nav-link`          | 14 / 0.875         | Regular / 400  | `$body-long-01` |
+| Element         | Font-size (px/rem) | Font-weight    | Type token            |
+| --------------- | ------------------ | -------------- | --------------------- |
+| Label: enabled  | 14 / 0.875         | Regular / 400  | `$body-compact-01`    |
+| Label: selected | 14 / 0.875         | SemiBold / 600 | `$heading-compact-01` |
 
 ## Structure
 
