small image  and copy tweak
•updated label in placement image
•updated placement copy to reflect auto-placement functionality

--- a/src/pages/components/tooltip/style.mdx
+++ b/src/pages/components/tooltip/style.mdx
@@ -97,10 +97,13 @@ contain.
 
 ### Placement
 
-Tooltips should be placed below the tooltip icon unless it is within the height
-of the tooltip box plus 16px / 1rem of the bottom of the page. In that instance,
-the tooltip should appear above the icon or defined word. On mobile, tooltips
-can only appear below the tooltip icon.
+Tooltip directions by default are set to auto. Upon opening, tooltips can detect
+the edges of the browser to properly be placed in view so the container does not
+get cutoff. Tooltips can instead use specific directions and may be
+positioned top, right, bottom, or left to the trigger item. Tooltips should be
+placed at least 16px / 1rem off of the bottom of the page and not bleed off page
+or behind other content. On mobile, tooltips can only appear below the tooltip
+icon.
 
 <div className="image--fixed">
 
