--- a/src/pages/components/tooltip/style.mdx
+++ b/src/pages/components/tooltip/style.mdx
@@ -27,7 +27,7 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 <Caption>Example of closed and open states for a standard tooltip</Caption>
 
-### Icon tooltip
+### Icon button tooltip
 
 | Element   | Property         | Color token           |
 | --------- | ---------------- | --------------------- |
