--- a/src/pages/components/tooltip/style.mdx
+++ b/src/pages/components/tooltip/style.mdx
@@ -15,7 +15,7 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 | -------------------- | ---------------- | --------------------- |
 | Label                | text color       | `$text-secondary`     |
 | Trigger button       | svg              | `$icon-secondary`     |
-| Trigger button hover | svg              | `$icon-primary`       |
+| Trigger button: hover | svg              | `$icon-primary`       |
 | Container            | background-color | `$background-inverse` |
 | Text                 | color            | `$text-inverse`       |
 
