update color images and max width specs
•changed color images from fixed images to responsive
•updated max width specs in tables and images

--- a/src/pages/components/tooltip/style.mdx
+++ b/src/pages/components/tooltip/style.mdx
@@ -11,21 +11,26 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 ### Standard tooltip
 
-| Element              | Property         | Color token           |
-| -------------------- | ---------------- | --------------------- |
-| Label                | text color       | `$text-secondary`     |
-| Trigger button       | svg              | `$icon-secondary`     |
+| Element               | Property         | Color token           |
+| --------------------- | ---------------- | --------------------- |
+| Label                 | text color       | `$text-secondary`     |
+| Trigger button        | svg              | `$icon-secondary`     |
 | Trigger button: hover | svg              | `$icon-primary`       |
-| Container            | background-color | `$background-inverse` |
-| Text                 | color            | `$text-inverse`       |
+| Container             | background-color | `$background-inverse` |
+| Text                  | color            | `$text-inverse`       |
 
-<div className="image--fixed">
+<Row>
+<Column colLg={8}>
 
-![Closed and open states for a tooltip](images/tooltip-style-1.png)
+![Closed and open states for a standard tooltip](images/tooltip-style-1.png)
 
-</div>
+</Column>
+</Row>
 
-<Caption>Example of closed and open states for a standard tooltip</Caption>
+<Caption>
+  Example of closed (top), hover (middle), and focus (bottom) states for a
+  standard tooltip
+</Caption>
 
 ### Icon button tooltip
 
@@ -34,13 +39,18 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 | Container | background-color | `$background-inverse` |
 | Text      | color            | `$text-inverse`       |
 
-<div className="image--fixed">
+<Row>
+<Column colLg={8}>
 
-![Closed and open states for an icon tooltip](images/tooltip-style-2.png)
+![Closed and open states for an icon button tooltip](images/tooltip-style-2.png)
 
-</div>
+</Column>
+</Row>
 
-<Caption>Example of closed and open states for an icon button tooltip</Caption>
+<Caption>
+  Example of closed (top), hover (middle), and focus (bottom) states for an icon
+  button tooltip
+</Caption>
 
 ## Typography
 
@@ -60,7 +70,7 @@ contain.
 
 | Element      | Property      | px / rem | Spacing token |
 | ------------ | ------------- | -------- | ------------- |
-| Container    | max-width     | 224 / 14 | –             |
+| Container    | max-width     | 288 / 18 | –             |
 |              | padding       | 16 / 1   | `$spacing-05` |
 |              | margin-top    | 8 / 0.5  | `$spacing-03` |
 | Trigger icon | height, width | 16 / 1   | –             |
@@ -80,7 +90,7 @@ contain.
 
 | Class     | Property                    | px / rem  | Spacing token |
 | --------- | --------------------------- | --------- | ------------- |
-| Container | max-width                   | 176 / 11  | –             |
+| Container | max-width                   | 208 / 13  | –             |
 |           | padding-left, padding-right | 16 / 1    | `$spacing-05` |
 |           | padding-top, padding-bottom | 2 / 0.125 | `$spacing-01` |
 | Caret     | margin-top                  | 4 / 0.25  | `$spacing-02` |
