--- a/src/pages/components/tile/usage.mdx
+++ b/src/pages/components/tile/usage.mdx
@@ -325,14 +325,6 @@ information. Expandable tiles can contain internal CTAs (like links to docs) if
 they are given their own click targets and the click target is reduced to only
 the chevron icon.
 
-<Row>
-<Column colLg={8}>
-
-![Example image of expandable tiles.](images/tile-usage-5.png)
-
-</Column>
-</Row>
-
 ## Formatting
 
 ### Anatomy
@@ -353,8 +345,8 @@ the chevron icon.
 ### Sizing
 
 The **width** varies depending on three basic grid modes: wide, narrow, and
-condensed while the **height** varies depending on the amount of content placed
-within it, but still following the aspect ratio.
+condensed. The **height** varies depending on the amount of content placed
+within it, but still follows the aspect ratio.
 
 [Aspect ratios](https://www.carbondesignsystem.com/guidelines/2x-grid/overview/#aspect-ratio)
 are written out as a formula of width to height, such as 3:2. It’s important to
@@ -655,11 +647,12 @@ Link has variants depending on the context. For further guidance, see Carbon’s
 
 ## References
 
-- Hagan Rivers,
-  [Interactions design with cards/tiles](https://medium.com/@hagan.rivers/interaction-design-with-cards-tiles-5a6895aa220d/)
-  (Medium, 2017)
+Hagan Rivers,
+[Interactions design with cards/tiles](https://medium.com/@hagan.rivers/interaction-design-with-cards-tiles-5a6895aa220d/)
+(Medium, 2017)
 
 ## Feedback
 
 Help us improve this component by providing feedback, asking questions, and
-leaving any other comments on [GitHub]().
+leaving any other comments on
+[GitHub](https://github.com/carbon-design-system/carbon-website/issues/new?assignees=&labels=feedback&template=feedback.md).
