--- a/src/pages/all-about-carbon/partners.mdx
+++ b/src/pages/all-about-carbon/partners.mdx
@@ -211,7 +211,12 @@ allocation to support Carbon's work.
 
 <Row>
 
-<Profile name="Mike Abbink" title="IBM Distinguished Designer, Carbon">
+<Profile name="Katrina Alcorn" title="General Manager of Design, Design Program Office">
+
+![Katrina Alcorn headshot](/images/team/alcorn_katrina.png)
+
+</Profile>
+<Profile name="Mike Abbink" title="Executive Creative Director, Design, IBM Distinguished Designer">
 
 ![Mike Abbink headshot](/images/team/abbink_mike.png)
 
@@ -229,11 +234,6 @@ allocation to support Carbon's work.
 <Profile name="Haidy Francis" title="Design Executive, IBM Security">
 
 ![Haidy Francis headshot](/images/team/francis_haidy.png)
-
-</Profile>
-<Profile name="Phil Gilbert" title="General Manager, Design Program Office">
-
-![Phil Gilbert headshot](/images/team/gilbert_phil.png)
 
 </Profile>
 <Profile name="Craig Moser" title="Vice President of Design and Usability, AI Applications">
