update: title content fixes

--- a/src/pages/all-about-carbon/partners.mdx
+++ b/src/pages/all-about-carbon/partners.mdx
@@ -216,12 +216,12 @@ allocation to support Carbon's work.
 ![Mike Abbink headshot](/images/team/abbink_mike.png)
 
 </Profile>
-<Profile name="Katrina Alcorn" title="General Manager of Design, Design Program Office">
+<Profile name="Katrina Alcorn" title="General Manager of Design, Cloud and Cognitive Software">
 
 ![Katrina Alcorn headshot](/images/team/alcorn_katrina.png)
 
 </Profile>
-<Profile name="Arin Bhowmick" title="Vice President and Chief Design Officer, IBM Cloud and Cognitive Software">
+<Profile name="Arin Bhowmick" title="Vice President and Chief Design Officer, Cloud and Cognitive Software">
 
 ![Arin Bhowmick headshot](/images/team/bhowmick_arin.png)
 
