--- a/src/pages/all-about-carbon/partners.mdx
+++ b/src/pages/all-about-carbon/partners.mdx
@@ -226,7 +226,7 @@ allocation to support Carbon's work.
 ![Arin Bhowmick headshot](/images/team/bhowmick_arin.png)
 
 </Profile>
-<Profile name="Sarah Brooks" title="IBM Distinguished Designer, Design Program Office">
+<Profile name="Sarah Brooks" title="Director, Design, Design Program Office, IBM Distinguished Designer">
 
 ![Sarah Brooks headshot](/images/team/brooks_sarah.png)
 
@@ -241,7 +241,7 @@ allocation to support Carbon's work.
 ![Craig Moser headshot](/images/team/moser_craig.png)
 
 </Profile>
-<Profile name="Doug Powell" title="Vice President, Designer Practices & Community, IBM Distinguished Designer">
+<Profile name="Doug Powell" title="Vice President, Designer Program Office, Cloud and Cognitive Software">
 
 ![Doug Powell headshot](/images/team/powell_doug.png)
 
