--- a/src/pages/all-about-carbon/partners.mdx
+++ b/src/pages/all-about-carbon/partners.mdx
@@ -241,7 +241,7 @@ allocation to support Carbon's work.
 ![Craig Moser headshot](/images/team/moser_craig.png)
 
 </Profile>
-<Profile name="Doug Powell" title="Vice President, Designer Program Office, Cloud and Cognitive Software">
+<Profile name="Doug Powell" title="Vice President, Design Program Office, Cloud and Cognitive Software">
 
 ![Doug Powell headshot](/images/team/powell_doug.png)
 
