--- a/src/pages/components/tooltip/usage.mdx
+++ b/src/pages/components/tooltip/usage.mdx
@@ -66,7 +66,7 @@ tooltips and use toggle tip instead.
 
 ### When not to use
 
-- Since a tooltip disappears when a user hovers away, do include information
+- Since a tooltip disappears when a user hovers away, do not include information
   that is pertinent for the user to complete their task. Use helper text that is
   always visible and accessible for vital information such as required fields.
 - Do not include interactive elements within a tooltip. Interactive elements in
