--- a/src/pages/all-about-carbon/partners.mdx
+++ b/src/pages/all-about-carbon/partners.mdx
@@ -211,17 +211,22 @@ allocation to support Carbon's work.
 
 <Row>
 
-<Profile name="Mike Abbink" title="IBM Distinguished Designer, Carbon">
+<Profile name="Mike Abbink" title="Executive Creative Director, Design, IBM Distinguished Designer">
 
 ![Mike Abbink headshot](/images/team/abbink_mike.png)
 
 </Profile>
-<Profile name="Arin Bhowmick" title="Vice President and Chief Design Officer, IBM Cloud and Cognitive Software">
+<Profile name="Katrina Alcorn" title="General Manager of Design, Cloud and Cognitive Software">
+
+![Katrina Alcorn headshot](/images/team/alcorn_katrina.png)
+
+</Profile>
+<Profile name="Arin Bhowmick" title="Vice President and Chief Design Officer, Cloud and Cognitive Software">
 
 ![Arin Bhowmick headshot](/images/team/bhowmick_arin.png)
 
 </Profile>
-<Profile name="Sarah Brooks" title="IBM Distinguished Designer, Design Program Office">
+<Profile name="Sarah Brooks" title="Director, Design, Design Program Office, IBM Distinguished Designer">
 
 ![Sarah Brooks headshot](/images/team/brooks_sarah.png)
 
@@ -231,17 +236,12 @@ allocation to support Carbon's work.
 ![Haidy Francis headshot](/images/team/francis_haidy.png)
 
 </Profile>
-<Profile name="Phil Gilbert" title="General Manager, Design Program Office">
-
-![Phil Gilbert headshot](/images/team/gilbert_phil.png)
-
-</Profile>
 <Profile name="Craig Moser" title="Vice President of Design and Usability, AI Applications">
 
 ![Craig Moser headshot](/images/team/moser_craig.png)
 
 </Profile>
-<Profile name="Doug Powell" title="Vice President, Designer Practices & Community, IBM Distinguished Designer">
+<Profile name="Doug Powell" title="Vice President, Design Program Office, Cloud and Cognitive Software">
 
 ![Doug Powell headshot](/images/team/powell_doug.png)
 
