--- a/src/pages/components/tooltip/usage.mdx
+++ b/src/pages/components/tooltip/usage.mdx
@@ -283,10 +283,10 @@ not bleed off page or behind other content.
 
 #### Text
 
-- Should contain relevant, specific content
-- Keep tooltips short and concise, no longer than a sentence or two
+- Should contain relevant, specific content.
+- Keep tooltips short and concise, no longer than a sentence or two.
 - Should not contain required information essential for a user to complete their
-  task since a tooltip is not persistent
+  task since a tooltip is not persistent.
 - Use sentence-style capitalization and write the text as full sentences with
   punctuation, unless space is limited.
 - Icon button tooltips that describe a button's function should only contain one
