docs(dataviz): add tree diagram demos, update network thumbnail

--- a/src/pages/data-visualization/complex-charts/index.mdx
+++ b/src/pages/data-visualization/complex-charts/index.mdx
@@ -34,6 +34,7 @@ go to the
 <AnchorLink>Heat maps</AnchorLink>
 <AnchorLink>Network diagrams</AnchorLink>
 <AnchorLink>Parallel coordinates</AnchorLink>
+<AnchorLink>Tree diagrams</AnchorLink>
 <AnchorLink>Tree maps</AnchorLink>
 <AnchorLink>Circle packs</AnchorLink>
 <AnchorLink>Geospatial charts</AnchorLink>
@@ -271,6 +272,16 @@ updated scatterplot matrix example. See the detail below.
 
 </Column>
 </Row>
+
+## Tree diagrams
+
+Carbon Charts supports both tree diagrams and dendrograms. Although the two are
+very similar, dendrograms tend to offer a more responsive layout for varying
+screen sizes.
+
+<div>
+  <ChartDemoGroup demoGroup={getDemoGroupByTitle('tree')} light={true} />
+</div>
 
 ## Tree maps
 
