--- a/src/pages/data-visualization/chart-types/index.mdx
+++ b/src/pages/data-visualization/chart-types/index.mdx
@@ -309,6 +309,17 @@ appropriate chart type.
     tag="Design only"
     >
 
+![GATSBY_EMPTY_ALT](images/networkdiagram.svg)
+
+</OverviewCard>
+</Column>
+
+<Column  colMax={3} colXl={3} colLg={4} colMd={4} colSm={2} noGutterSm >
+ <OverviewCard
+    title="Tree diagram"
+    href="/data-visualization/complex-charts#tree-diagrams"
+    >
+
 ![GATSBY_EMPTY_ALT](images/treediagram.svg)
 
 </OverviewCard>
