--- a/src/pages/migrating/guide/develop.mdx
+++ b/src/pages/migrating/guide/develop.mdx
@@ -595,43 +595,7 @@ now account for the `className` being in the wrapper.
 
 ### Event handler updates <Tag type="cyan">Breaking</Tag>
 
-We have renamed our color tokens to be more semantic and better inform on their
-usage. Some of the changes can be easily done with find-and-replace, however,
-some may require more manual updates. When migrating, make sure to double check
-that you were using the correct v10 token as to not migrate to an incorrect
-token.
-
-#### What this means for you and your team
-
-- Intuitive naming ensures correct token usage
-- Less ambiguity around what a color token is for
-
-#### How to migrate
-
-1. Check for any sass files that are referencing color tokens, and use our color
-   token migration table to find the updated token name. We recommend checking
-   manually since some of the v10 tokens apply to more than one v11 token,
-   depending on its usage. For example, `hover-ui` could be `field-hover` or
-   `layer-hover`.
-
-### Resources
-
-<Row className="resource-card-group">
-  <Column colLg={4} colMd={4} noGutterSm>
-    <ResourceCard
-      subTitle="Color tokens migration table"
-      href="https://github.com/carbon-design-system/carbon/blob/main/docs/migration/11.x-color.md">
-      <MdxIcon name="github" />
-    </ResourceCard>
-  </Column>
-  <Column colLg={4} colMd={4} noGutterSm>
-    <ResourceCard
-      subTitle="Color tokens migration table"
-      href="https://github.com/carbon-design-system/carbon/blob/main/docs/migration/11.x-color.md">
-      <MdxIcon name="github" />
-    </ResourceCard>
-  </Column>
-</Row>
+Guidance coming soon.
 
 ## New Components
 
@@ -660,10 +624,6 @@ Learn more about our Popover component and it's API below:
 </Column>
 </Row>
 
-### ToggleTip
-
-### Dialog
-
 ### Resources
 
 <Row className="resource-card-group">
@@ -682,25 +642,3 @@ Learn more about our Popover component and it's API below:
     </ResourceCard>
   </Column>
 </Row>
-
-<!-- 
-
-## Size Props
-
-- Over the years our size props got a little messy. So we updated them, so that
-  they are now consistent across all of our components.
-
-### What this means for you and your team:
-
-The props should now look like this:
-
-| Prop Name | Size |
-| --------- | ---- |
-| xs        | 24px |
-| sm        | 32px |
-| md        | 40px |
-| lg        | 48px |
-| xl        | 64px |
-| 2xl       | 80px |
-
--->
